objects/ACMFacility__c.object
<CustomObject>
    <description>Holds all the facilities that come out of ACM linked to a client plan</description>
    <fields>
        <fullName>ACMUTILIZATIONAMOUNT__c</fullName>
        <label>Utilization Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACMUTILIZATIONCURRENCY__c</fullName>
        <label>Utilization Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrang_Fee__c</fullName>
        <label>Arrang. Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BANKRISKTAKER__c</fullName>
        <label>Bank Risk Taker</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Application_Key__c</fullName>
        <label>Bank Application Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLIENTPLAN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The client plan attached to this facility record</description>
        <label>Client Plan</label>
        <referenceTo>Client_Plan__c</referenceTo>
        <relationshipLabel>ACM Facilities</relationshipLabel>
        <relationshipName>ACM_Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COM_FEES__c</fullName>
        <label>Com. Fees (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPTYID__c</fullName>
        <description>The SDS of the facility record in question</description>
        <label>SDS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPTYLABEL__c</fullName>
        <description>Label for user to recognise which SDS this facility is for.</description>
        <label>CPTYLABEL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPIRYDATE__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FACILITYACTIVE__c</fullName>
        <description>Specifies whether a facility is active or not</description>
        <label>Facility Active</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FACILITYAMOUNT__c</fullName>
        <label>Facility Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FACILITYCURRENCY__c</fullName>
        <label>Facility Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FACILITYPRODUCTDESCRIPTION__c</fullName>
        <description>The description of the product on this facility</description>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FACILITYPRODUCT__c</fullName>
        <description>Facility Product for the Facility in question</description>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP_bps__c</fullName>
        <label>FTP (bps)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facility_Id__c</fullName>
        <label>Facility Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GROSS_MARGIN__c</fullName>
        <label>GROSS MARGIN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LOSSGIVENDEFAULT__c</fullName>
        <description>LGD retrieved from ACM</description>
        <label>LGD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MODIFIEDBY__c</fullName>
        <label>Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MODIFIEDTIMESTAMP__c</fullName>
        <label>Modified Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Net_Margin__c</fullName>
        <label>Net Margin (%)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PARENTFACILITYID__c</fullName>
        <label>Parent Facility ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RETRIEVEDVIAACM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to specify whether this record was added manually or via an ACM pull</description>
        <label>Retrieved via ACM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ACM Facilities</relationshipLabel>
        <relationshipName>ACM_Facilities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RoRWA__c</fullName>
        <label>RoRWA (%)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STARTDATE__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TENORUNIT__c</fullName>
        <label>Tenor Unit</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TENORVALUE__c</fullName>
        <label>Tenor Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ACM Facility</label>
    <nameField>
        <label>ACM Facility ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACM Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>